# learnOpenGL

./: .gitignore  CMakeLists.txt  glad.c  learnOpenGL.pro  main.cpp  mcharacter.cpp  mcharacter.h  mesh.cpp  mesh.h  mmatrix.cpp  mmatrix.h  model3d.cpp  model3d.h  mshader.cpp  mshader.h  mvec.h  stb_image_implementatio.cpp  stb_image_implementation.h
learn/: CMakeLists.txt  uniform.cpp
model/nanosuit/: nanosuit.blend
shader/: font.frag  fragment.frag  geometry.geom  geometry.geomt  geometry.vert  instance.vert  lamp.frag  photo.frag  photo.vert  reflection.frag  skybox.frag  skybox.vert  static.vert  transparent.frag  vertex.vert
shaders/: uniform.frag  uniform.vert
